--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - docker build -t erikflogvall/react-test -f ./client/DockerFile.dev ./client
 
 script:
-  - docker run -e CI=true USERNAME/react-test npm test
+  - docker run -e CI=true erikflogvall/react-test npm test
 
 deploy:
   provider: script
