--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - gcloud config set compute/zone europe-north1-a
   - gcloud container clusters get-credentials multi-cluster
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build -t erikflogvall/react-test -f ./client/DockerFile.dev ./client
+  - docker build -t erikflogvall/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true erikflogvall/react-test npm test
